# Impact-Scope

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  main.py  mypy.ini  pyproject.toml  run_tests.py
docs/: analysis-roadmap.md  api-reference.md  architecture.md  ci-integration.md  contributing.md  getting-started.md  roadmap.md  troubleshooting.md  user-guide.md  visualization-guide.md
src/: main.py
src/cli/: cli.py
src/core/: call_graph.py  call_mapper.py  cli.py  constants.py  git_diff.py  impact_mapper.py  parser.py  path_utils.py  visualization.py
src/output/: json_output.py
src/utils/: path_utils.py
src/visualization/: visualization.py
tests/: test_git_diff.py  test_impact_mapper.py  test_parser.py  test_path_utils.py
